--- a/css/magazine.css
+++ b/css/magazine.css
@@ -151,6 +151,8 @@ body {
 
 	background: gray;
 
+	box-shadow: 0px 0px 300px 0px rgba(0,0,0,0.1) inset;
+
 	-webkit-transition: all 0.6s ease;
 	-moz-transition: all 0.6s ease;
 	-o-transition: all 0.6s ease;
@@ -739,7 +741,7 @@ div.page-number-text {
 
 	cursor: hand;
 
-	box-shadow: 20px -20px 50px 0px #000;
+	box-shadow: 20px -20px 50px 0px rgba(0,0,0,0.8);
 
 	-webkit-transform: rotate(45deg);
 	-moz-transform: rotate(45deg);
@@ -763,11 +765,11 @@ div.page-number-text {
  */
 .page.caption-top-arrow,
 .page.caption-bottom-arrow {
-	box-shadow: 35px 0px 100px 0px #000;
+	box-shadow: 35px 0px 100px 0px rgba(0,0,0,0.8);
 }
 .page.caption-top-arrow:before,
 .page.caption-bottom-arrow:before {
-	box-shadow: 20px -20px 30px 10px #000;
+	box-shadow: 20px -20px 30px 10px rgba(0,0,0,0.8);
 }
 /* XXX changing shdows makes things a bit gittery on devices...
 .current.page.caption-top-arrow,
