--- a/css/magazine.css
+++ b/css/magazine.css
@@ -151,7 +151,7 @@ body {
 
 	background: gray;
 
-	box-shadow: 0px 0px 300px 0px rgba(0,0,0,0.1) inset;
+	/*box-shadow: 0px 0px 300px 0px rgba(0,0,0,0.15) inset;*/
 
 	-webkit-transition: all 0.6s ease;
 	-moz-transition: all 0.6s ease;
